--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1337,31 +1337,274 @@ body {
   height: auto;
   min-height: 100vh;
 }
-.cid-qy83clW7t8 {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
+.cid-qyi9owwHpd {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background: #efefef;
 }
-.cid-qy83clW7t8 .line {
-  background-color: #ffffff;
-  color: #ffffff;
-  align: center;
-  height: 2px;
+.cid-qyi9owwHpd .media-container-row {
   margin: 0 auto;
+  align-items: stretch;
 }
-.cid-qy83clW7t8 .section-text {
-  padding: 2rem 0;
-  text-align: left;
+.cid-qyi9owwHpd .media-container-row .img-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  z-index: 1;
 }
-.cid-qy83clW7t8 .inner-container {
-  margin: 0 auto;
+.cid-qyi9owwHpd .media-container-row .img-item img {
+  width: 100%;
 }
-@media (max-width: 768px) {
-  .cid-qy83clW7t8 .inner-container {
+.cid-qyi9owwHpd .media-container-row .img-item .img-caption {
+  background: #ffffff;
+  z-index: 2;
+  padding: 1rem 1rem;
+  word-break: break-word;
+}
+.cid-qyi9owwHpd .media-container-row .img-item .img-caption p {
+  margin-bottom: 0;
+}
+.cid-qyi9owwHpd .media-container-row .img-item.item1 {
+  padding: 0 2rem 0 0;
+}
+@media (max-width: 992px) {
+  .cid-qyi9owwHpd .img-item {
     width: 100% !important;
   }
+  .cid-qyi9owwHpd .img-item.item1 {
+    width: 100%;
+    flex-basis: initial !important;
+    padding: 0 0 2rem 0 !important;
+  }
 }
-.cid-qy83clW7t8 .section-text DIV {
+.cid-qyi9owwHpd P {
+  text-align: left;
+}
+.cid-qyi6OrxDWZ {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background: #efefef;
+}
+.cid-qyi6OrxDWZ .media-container-row {
+  margin: 0 auto;
+  align-items: stretch;
+}
+.cid-qyi6OrxDWZ .media-container-row .img-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  z-index: 1;
+}
+.cid-qyi6OrxDWZ .media-container-row .img-item img {
+  width: 100%;
+}
+.cid-qyi6OrxDWZ .media-container-row .img-item .img-caption {
+  background: #ffffff;
+  z-index: 2;
+  padding: 1rem 1rem;
+  word-break: break-word;
+}
+.cid-qyi6OrxDWZ .media-container-row .img-item .img-caption p {
+  margin-bottom: 0;
+}
+.cid-qyi6OrxDWZ .media-container-row .img-item.item1 {
+  padding: 0 2rem 0 0;
+}
+@media (max-width: 992px) {
+  .cid-qyi6OrxDWZ .img-item {
+    width: 100% !important;
+  }
+  .cid-qyi6OrxDWZ .img-item.item1 {
+    width: 100%;
+    flex-basis: initial !important;
+    padding: 0 0 2rem 0 !important;
+  }
+}
+.cid-qyi6OrxDWZ P {
+  text-align: left;
+}
+.cid-qyi7lzJGex {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background: #efefef;
+}
+.cid-qyi7lzJGex .media-container-row {
+  margin: 0 auto;
+  align-items: stretch;
+}
+.cid-qyi7lzJGex .media-container-row .img-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  z-index: 1;
+}
+.cid-qyi7lzJGex .media-container-row .img-item img {
+  width: 100%;
+}
+.cid-qyi7lzJGex .media-container-row .img-item .img-caption {
+  background: #ffffff;
+  z-index: 2;
+  padding: 1rem 1rem;
+  word-break: break-word;
+}
+.cid-qyi7lzJGex .media-container-row .img-item .img-caption p {
+  margin-bottom: 0;
+}
+.cid-qyi7lzJGex .media-container-row .img-item.item1 {
+  padding: 0 2rem 0 0;
+}
+@media (max-width: 992px) {
+  .cid-qyi7lzJGex .img-item {
+    width: 100% !important;
+  }
+  .cid-qyi7lzJGex .img-item.item1 {
+    width: 100%;
+    flex-basis: initial !important;
+    padding: 0 0 2rem 0 !important;
+  }
+}
+.cid-qyi7lzJGex P {
+  text-align: left;
+}
+.cid-qyi7PwoYj0 {
+  padding-top: 0px;
+  padding-bottom: 30px;
+  background: #efefef;
+}
+.cid-qyi7PwoYj0 .media-container-row {
+  margin: 0 auto;
+  align-items: stretch;
+}
+.cid-qyi7PwoYj0 .media-container-row .img-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  z-index: 1;
+}
+.cid-qyi7PwoYj0 .media-container-row .img-item img {
+  width: 100%;
+}
+.cid-qyi7PwoYj0 .media-container-row .img-item .img-caption {
+  background: #ffffff;
+  z-index: 2;
+  padding: 1rem 1rem;
+  word-break: break-word;
+}
+.cid-qyi7PwoYj0 .media-container-row .img-item .img-caption p {
+  margin-bottom: 0;
+}
+.cid-qyi7PwoYj0 .media-container-row .img-item.item1 {
+  padding: 0 2rem 0 0;
+}
+@media (max-width: 992px) {
+  .cid-qyi7PwoYj0 .img-item {
+    width: 100% !important;
+  }
+  .cid-qyi7PwoYj0 .img-item.item1 {
+    width: 100%;
+    flex-basis: initial !important;
+    padding: 0 0 2rem 0 !important;
+  }
+}
+.cid-qyi7PwoYj0 P {
+  text-align: left;
+}
+.cid-qyi8KTIHQb {
+  padding-top: 0px;
+  padding-bottom: 30px;
+  background: #efefef;
+}
+.cid-qyi8KTIHQb .media-container-row {
+  margin: 0 auto;
+  align-items: stretch;
+}
+.cid-qyi8KTIHQb .media-container-row .img-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  z-index: 1;
+}
+.cid-qyi8KTIHQb .media-container-row .img-item img {
+  width: 100%;
+}
+.cid-qyi8KTIHQb .media-container-row .img-item .img-caption {
+  background: #ffffff;
+  z-index: 2;
+  padding: 1rem 1rem;
+  word-break: break-word;
+}
+.cid-qyi8KTIHQb .media-container-row .img-item .img-caption p {
+  margin-bottom: 0;
+}
+.cid-qyi8KTIHQb .media-container-row .img-item.item1 {
+  padding: 0 2rem 0 0;
+}
+@media (max-width: 992px) {
+  .cid-qyi8KTIHQb .img-item {
+    width: 100% !important;
+  }
+  .cid-qyi8KTIHQb .img-item.item1 {
+    width: 100%;
+    flex-basis: initial !important;
+    padding: 0 0 2rem 0 !important;
+  }
+}
+.cid-qyi8KTIHQb P {
+  text-align: left;
+}
+.cid-qyigLMnSPj {
+  padding-top: 0px;
+  padding-bottom: 30px;
+  background: #efefef;
+}
+.cid-qyigLMnSPj .media-container-row {
+  margin: 0 auto;
+  align-items: stretch;
+}
+.cid-qyigLMnSPj .media-container-row .img-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  z-index: 1;
+}
+.cid-qyigLMnSPj .media-container-row .img-item img {
+  width: 100%;
+}
+.cid-qyigLMnSPj .media-container-row .img-item .img-caption {
+  background: #ffffff;
+  z-index: 2;
+  padding: 1rem 1rem;
+  word-break: break-word;
+}
+.cid-qyigLMnSPj .media-container-row .img-item .img-caption p {
+  margin-bottom: 0;
+}
+.cid-qyigLMnSPj .media-container-row .img-item.item1 {
+  padding: 0 2rem 0 0;
+}
+@media (max-width: 992px) {
+  .cid-qyigLMnSPj .img-item {
+    width: 100% !important;
+  }
+  .cid-qyigLMnSPj .img-item.item1 {
+    width: 100%;
+    flex-basis: initial !important;
+    padding: 0 0 2rem 0 !important;
+  }
+}
+.cid-qyigLMnSPj P {
   text-align: left;
 }
 .cid-qy24WByGFm {
@@ -1498,7 +1741,7 @@ body {
 }
 .cid-qy2bIKJzq7 {
   padding-top: 30px;
-  padding-bottom: 45px;
+  padding-bottom: 30px;
   background: #efefef;
 }
 .cid-qy2bIKJzq7 .media-container-row {
@@ -1539,6 +1782,51 @@ body {
   }
 }
 .cid-qy2bIKJzq7 P {
+  text-align: left;
+}
+.cid-qyhhBJv0XS {
+  padding-top: 0px;
+  padding-bottom: 45px;
+  background: #efefef;
+}
+.cid-qyhhBJv0XS .media-container-row {
+  margin: 0 auto;
+  align-items: stretch;
+}
+.cid-qyhhBJv0XS .media-container-row .img-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  z-index: 1;
+}
+.cid-qyhhBJv0XS .media-container-row .img-item img {
+  width: 100%;
+}
+.cid-qyhhBJv0XS .media-container-row .img-item .img-caption {
+  background: #ffffff;
+  z-index: 2;
+  padding: 1rem 1rem;
+  word-break: break-word;
+}
+.cid-qyhhBJv0XS .media-container-row .img-item .img-caption p {
+  margin-bottom: 0;
+}
+.cid-qyhhBJv0XS .media-container-row .img-item.item1 {
+  padding: 0 2rem 0 0;
+}
+@media (max-width: 992px) {
+  .cid-qyhhBJv0XS .img-item {
+    width: 100% !important;
+  }
+  .cid-qyhhBJv0XS .img-item.item1 {
+    width: 100%;
+    flex-basis: initial !important;
+    padding: 0 0 2rem 0 !important;
+  }
+}
+.cid-qyhhBJv0XS P {
   text-align: left;
 }
 .cid-qy2eJbCqLF {
@@ -1811,16 +2099,16 @@ body {
 .cid-qy5DIFI7ki P {
   text-align: left;
 }
-.cid-qy5TqJDgau {
+.cid-qyiQXoTo64 {
   padding-top: 30px;
-  padding-bottom: 45px;
+  padding-bottom: 15px;
   background: #efefef;
 }
-.cid-qy5TqJDgau .media-container-row {
+.cid-qyiQXoTo64 .media-container-row {
   margin: 0 auto;
   align-items: stretch;
 }
-.cid-qy5TqJDgau .media-container-row .img-item {
+.cid-qyiQXoTo64 .media-container-row .img-item {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -1828,32 +2116,32 @@ body {
   width: 100%;
   z-index: 1;
 }
-.cid-qy5TqJDgau .media-container-row .img-item img {
+.cid-qyiQXoTo64 .media-container-row .img-item img {
   width: 100%;
 }
-.cid-qy5TqJDgau .media-container-row .img-item .img-caption {
+.cid-qyiQXoTo64 .media-container-row .img-item .img-caption {
   background: #ffffff;
   z-index: 2;
   padding: 1rem 1rem;
   word-break: break-word;
 }
-.cid-qy5TqJDgau .media-container-row .img-item .img-caption p {
+.cid-qyiQXoTo64 .media-container-row .img-item .img-caption p {
   margin-bottom: 0;
 }
-.cid-qy5TqJDgau .media-container-row .img-item.item1 {
+.cid-qyiQXoTo64 .media-container-row .img-item.item1 {
   padding: 0 2rem 0 0;
 }
 @media (max-width: 992px) {
-  .cid-qy5TqJDgau .img-item {
+  .cid-qyiQXoTo64 .img-item {
     width: 100% !important;
   }
-  .cid-qy5TqJDgau .img-item.item1 {
+  .cid-qyiQXoTo64 .img-item.item1 {
     width: 100%;
     flex-basis: initial !important;
     padding: 0 0 2rem 0 !important;
   }
 }
-.cid-qy5TqJDgau P {
+.cid-qyiQXoTo64 P {
   text-align: left;
 }
 .cid-qy5Vkv6iNK {
@@ -3115,4 +3403,230 @@ body {
 }
 .cid-qy5XSrwVe7 .section-text DIV {
   text-align: left;
+}
+.cid-qyhiRotn44 {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-qyhiRotn44 .mbr-text,
+.cid-qyhiRotn44 blockquote {
+  color: #767676;
+}
+.cid-qyhiRotn44 .mbr-text {
+  color: #232323;
+  text-align: center;
+}
+.cid-qyhiRotn44 .mbr-text P {
+  text-align: left;
+}
+.cid-qyhiRBcA08 {
+  background: #ffffff;
+}
+.cid-qyhiRBcA08 .image-block {
+  margin: auto;
+  width: 100% !important;
+}
+.cid-qyhiRBcA08 .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qyhiRBcA08 figcaption {
+  position: relative;
+}
+.cid-qyhiRBcA08 figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qyhiRBcA08 .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qyhiSj1GuP {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-qyhiSj1GuP .line {
+  background-color: #ffffff;
+  color: #ffffff;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-qyhiSj1GuP .section-text {
+  padding: 2rem 0;
+  text-align: left;
+}
+.cid-qyhiSj1GuP .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-qyhiSj1GuP .inner-container {
+    width: 100% !important;
+  }
+}
+.cid-qyhiSj1GuP .section-text DIV {
+  text-align: left;
+}
+.cid-qyhm88x07y {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-qyhm88x07y .mbr-text,
+.cid-qyhm88x07y blockquote {
+  color: #767676;
+}
+.cid-qyhm88x07y .mbr-text {
+  color: #232323;
+  text-align: center;
+}
+.cid-qyhm88x07y .mbr-text P {
+  text-align: left;
+}
+.cid-qyhm8G9zLt {
+  background: #ffffff;
+}
+.cid-qyhm8G9zLt .image-block {
+  margin: auto;
+  width: 100% !important;
+}
+.cid-qyhm8G9zLt .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qyhm8G9zLt figcaption {
+  position: relative;
+}
+.cid-qyhm8G9zLt figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qyhm8G9zLt .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qyhm90go0K {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-qyhm90go0K .line {
+  background-color: #ffffff;
+  color: #ffffff;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-qyhm90go0K .section-text {
+  padding: 2rem 0;
+  text-align: left;
+}
+.cid-qyhm90go0K .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-qyhm90go0K .inner-container {
+    width: 100% !important;
+  }
+}
+.cid-qyhm90go0K .section-text DIV {
+  text-align: left;
+}
+.cid-qyiNFdCJJG {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-qyiNFdCJJG .line {
+  background-color: #ffffff;
+  color: #ffffff;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-qyiNFdCJJG .section-text {
+  padding: 2rem 0;
+  text-align: left;
+}
+.cid-qyiNFdCJJG .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-qyiNFdCJJG .inner-container {
+    width: 100% !important;
+  }
+}
+.cid-qyiNFdCJJG .section-text DIV {
+  text-align: left;
+}
+.cid-qyiWo1Nqsq {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-qyiWo1Nqsq .mbr-text,
+.cid-qyiWo1Nqsq blockquote {
+  color: #767676;
+}
+.cid-qyiWo1Nqsq .mbr-text {
+  color: #232323;
+  text-align: center;
+}
+.cid-qyiWo1Nqsq .mbr-text P {
+  text-align: left;
+}
+.cid-qyiWkW7zWf {
+  background: #ffffff;
+}
+.cid-qyiWkW7zWf .image-block {
+  margin: auto;
+  width: 100% !important;
+}
+.cid-qyiWkW7zWf .mbr-figure {
+  margin: 0 auto;
+}
+.cid-qyiWkW7zWf figcaption {
+  position: relative;
+}
+.cid-qyiWkW7zWf figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-qyiWkW7zWf .image-block {
+    width: 100% !important;
+  }
+}
+.cid-qyiVFhjph0 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-qyiVFhjph0 .line {
+  background-color: #ffffff;
+  color: #ffffff;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-qyiVFhjph0 .section-text {
+  padding: 2rem 0;
+  text-align: left;
+}
+.cid-qyiVFhjph0 .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-qyiVFhjph0 .inner-container {
+    width: 100% !important;
+  }
+}
+.cid-qyiVFhjph0 .section-text DIV {
+  text-align: left;
+  color: #232323;
 }
